--- a/lab2/src/table.css
+++ b/lab2/src/table.css
@@ -1,53 +1,64 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: hidden;
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   overflow: hidden;
 }
 
-body, html {
-    font-family: Arial, sans-serif;
-    min-height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
+.top-bottom{
+   width: 100%;
+   min-height: 10vh;
+   position: fixed;
+   z-index: 1000;
+   display: flex;
+   align-items: center;
+
+   background-color: #90caf9;
+}
+#top{
+   top: 0;
+   left: 0;
+   justify-content: space-between;
 }
 
-header {
-    background-color: #90caf9;
-    padding: 40px 20px;
-    position: relative;
-    height: 15vh;
+header, footer {
+   padding: 20px;
 }
 
 .header-logo {
-    position: absolute;
-    left: 20px;
-    top: 40px;
-    background-color: white;
-    color: #000;
-    width: 10%;
-    border: 2px solid black;
-    padding: 10px;
-    text-align: right;
+   background-color: white;
+   color: #000;
+   width: 10%;
+   border: 2px solid black;
+   text-align: right;
+   padding: 10px;
+}
+
+.footer-logo {
+   background-color: white;
+   color: #000;
+   width: 10%;
+   text-align: left;
+   border: 2px solid black;
+   padding: 10px;
+}
+
+table {
+    width: 100%;
 }
 
 nav {
-    margin-left: 89%;
-}
-
-header table {
     width: 11%;
 }
 
-header td {
+td {
     padding: 15px 5px;
     border-radius: 10px;
     background-color: #ffffff;
+    text-align: center;
 }
 
-header td:hover {
+td:hover {
     cursor: pointer;
     background-color: rgb(227, 227, 227);
 }
@@ -57,89 +68,145 @@ a {
     color: black;
 }
 
-.layout {
-    width: 100%;
-    height: 100%;
+#bottom{
+   bottom: 0;
+   left: 0;
+   justify-content: space-between;
 }
 
-.left-side {
-    background-color: aqua;
-    padding-left: 20px;
-    width: 20vw;
-    vertical-align: middle;
-    margin-right: 2vw;
+body{
+   height: 100vh;
+   padding-top: 10vh; 
+   padding-bottom: 10vh;
 }
 
-.midl-section {
-    background-color: #b49b9b;
-    padding-left: 20px;
-    text-align: left;
-    vertical-align: top;
-    width: 20vw;
+.main{
+   width: 100%;
+   height: 100%;
 }
 
+.main div{
+   transition: all 0.3s ease-in;
+}
+
+.first-half {
+   height: 100%;
+   width: 45%;
+   float: left;
+   margin-left: 2.5%;
+}
+
+.left-side{
+   height: 100%;
+   float: left;
+   width: 45%;
+   margin-right: 2.5%;
+   justify-items: left;
+   align-content: center;
+   padding-left: 20px;
+   background-color: aqua;
+}
 .right-side {
-    background-color: #ffffff;
-    vertical-align: top;
-    width: 40vw;
+   height: 100%;
+   float: right;
+   width: 45%;
+   margin-right: 2.5%;
+   margin-left: 2.5%;
+   justify-items: left;
+   align-content: center;
+   text-align: left;
+   padding-left: 20px;
+   background-color: #b49b9b;
+}
+
+.second-half{
+   float: right;
+   height: 100%;
+   width: 45%;
+   margin-right: 2.5%;
 }
 
 .up-row {
-    width: 100%;
-    background-color: coral;
-    text-align: center;
-    clear: both;
-    padding: 20px;
+   background-color: coral;
+   place-items: center;
+   text-align: center;
+   padding: 6rem;
+   color: black;
+   font-weight: bold;
+   height: 30%;
+   width: 95%;
+   margin-left: 2.5%;
+   margin-right: 2.5%;
+   margin-bottom: 0;
 }
 
 .down-row{
-    margin: 0px;
+   height: 70%;
+   width: 95%;
+   margin-left: 2.5%;
+   margin-right: 2.5%;
+   margin-top: 0;
 }
 
-main {
-    height: 70vh;
+.donw-left-column{
+   float: left;
+   width: 45%;
+   margin-right: 2.5%;
+   background-color: chartreuse;
+   justify-items: left;
+   align-content: center;
+   text-align: left;
 }
 
-
-.down-left-column {
-    width: 45%;
-    background-color: chartreuse;
-    float: left;
-    margin-right: 2vw;
-    padding-left: 20px;
-    box-sizing: border-box;
-    height: 70vh;
-    padding-right: 20px;
+.donw-right-column{
+   float: right;
+   width: 45%;
+   margin-left: 2.5%;
+   justify-items: left;
+   align-content: center;
+   text-align: left;
+   background-color: violet;
 }
 
-.down-right-column {
-    width: 45%;
-    background-color: violet;
-    float: right;
-    padding-left: 20px;
-    box-sizing: border-box;
-    height: 70vh;
+.donw-left-column, .donw-right-column {
+   height: 100%;
+   margin: 0;
+   padding-left: 20px;
 }
 
-footer {
-    background-color: #90caf9;
-    padding: 40px 20px;
-    position: relative;
-    height: 15vh;
+p {
+   font-family: Arial, sans-serif;
+   margin: 0;
+   padding: 5px;
+ }
+
+.text-wrapper{
+   color: black;
+   padding: 5px;
+   font-family: 'rdr-font', sans-serif;
+   font-weight: 600;
+   font-size: 3.5rem;
 }
 
-footer p {
-    text-align: left;
+a {
+   text-decoration: none;
+   color: black;
 }
 
-.footer-logo {
-    position: absolute;
-    right: 20px;
-    bottom: 40px;
-    background-color: white;
-    color: #000;
-    padding: 10px;
-    border: 2px solid black;
-    text-align: left;
-    width: 10%;
-}
+li {
+   font:
+     1rem 'Fira Sans',
+     sans-serif;
+   margin-bottom: 0.5rem;
+   margin-top: 10px;
+   justify-content: center;
+   align-items: left;
+   text-align: left;
+ }
+
+  .midl-section h3,
+  .donw-left-column h3,
+  .donw-right-column h3 {
+      text-align: left;
+      float: left;
+  }
